# neon-os

./: .gitignore  Boot.S  CMakeLists.txt  README.md  linker.ld
arch/: CMakeLists.txt
arch/arm64/: CMakeLists.txt  arch.c
builds/arm64/: build_qemu.bat
builds/win/arm64/: build_qemu.bat
kernel/: CMakeLists.txt  arch.h  kernel.c
kernel/buffer/: CMakeLists.txt  shared_buffer.c  shared_buffer.h
kernel/console/: CMakeLists.txt  console.c  console.h  shell.c  shell.h  shell_alias.c  shell_alias.h  shell_commands.c  shell_commands.h  shell_io.c  shell_io.h  shell_limits.h  shell_path.c  shell_path.h  shell_picker.c  shell_picker.h  shell_script.c  shell_script.h  shell_util.c  shell_util.h
kernel/fs/: CMakeLists.txt  neon_fs.c  neon_fs.h
kernel/fs/fatfs/: CMakeLists.txt  block.h  ff.c  ffconf.h
kernel/gfx/: CMakeLists.txt  font.c  framebuffer.h  gfx.c  gfx.h
kernel/gfx/include/: font.h
kernel/include/: uart.h
kernel/input/: CMakeLists.txt  input.c  input.h
kernel/libc/: CMakeLists.txt  ctype.c  errno.c  errno.h  float.h  format.c  limits.h  locale.c  locale.h  math.c  math.h  setjmp.S  setjmp.h  stdarg.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  strtod.c  strtol.c  time.c  time.h
kernel/program/: CMakeLists.txt  builtin_apps_install.c  builtin_apps_install.h  program_runtime.c  program_runtime.h
kernel/std/: CMakeLists.txt  memory.c  string.h
kernel/zip/: CMakeLists.txt  zip.c  zip.h
lua/: CMakeLists.txt  lua_runner.c  lua_runner.h  lua_shell.c  lua_shell.h  neon_lua.c  neon_lua.h
lua/buffer/: CMakeLists.txt  lua_buffer.c  lua_buffer.h
lua/fs/: CMakeLists.txt  lua_fs.c  lua_fs.h
lua/gfx/: CMakeLists.txt  lua_gfx.c  lua_gfx.h
lua/gfx/bitmap/: CMakeLists.txt  lua_bitmap.c  lua_bitmap.h
lua/input/: CMakeLists.txt  lua_input.c  lua_input.h
lua/shell/: CMakeLists.txt  lua_shell_api.c  lua_shell_api.h
lua/src/: lapi.c  lobject.c  lobject.h  loslib.c
lua/zip/: CMakeLists.txt  lua_zip.c  lua_zip.h
pipelines/arm64/: build_qemu.bat  build_raspi3b.bat
resources/: CMakeLists.txt  embed_builtin.cmake
resources/builtin/.packages/image_viewer/: icon.pkicn  main.lua  package.txt
resources/builtin/.packages/notes/: icon.pkicn  main.lua  notes_actions.lua  notes_config.lua  notes_document.lua  notes_render.lua  notes_util.lua  package.txt
resources/builtin/.system/neonos/.neon_desktop/: desktop_config.lua  desktop_data.lua  desktop_render.lua  desktop_util.lua  main.lua  package.txt
resources/builtin/.system/neonos/.package_installer/: main.lua  package.txt
resources/builtin/.system/neonos/explorer/: explorer_actions.lua  explorer_config.lua  explorer_render.lua  explorer_state.lua  explorer_util.lua  icon.pkicn  main.lua  package.txt
resources/builtin/.system/neonos/lua/ui/: canvas.lua  input.lua  palette.lua
resources/builtin/.system/neonos/lua/ui/modules/: context.lua  input_box.lua  message.lua  message_box.lua
resources/builtin/.system/neonos/terminal/: icon.pkicn  main.lua  package.txt
resources/builtin/.system/scripts/: boot.sh
resources/builtin/.system/variables/: ALIAS.txt  PATH.txt
resources/builtin/games/: breakout.lua  maze.lua  minesweeper.lua  pacman.lua  pong.lua  snake.lua
resources/builtin/programs/: notes.lua
resources/builtin/system/: explorer.lua
resources/builtin/system/neonos/: desktop.lua  explorer.lua  lua.lua  terminal.lua
resources/builtin/system/variables/: ALIAS.txt  PATH.txt
toolchains/: aarch64-none-elf.cmake
